--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap');
 *{
     padding: 0;
     margin: 0;
@@ -35,9 +37,7 @@ body{
     font-family: 'Signika Negative', sans-serif;
 }
 /* ----------sección personaje----------- */
-#boton-personaje{
-    padding: 10px;
-}
+
 
 
 
@@ -45,7 +45,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: center;
-
+    height: 70vh;
 }
 
 .tarjeta-de-personajes{
@@ -66,13 +66,15 @@ input{
 }
 
 #boton-personaje{
+    text-align: center;
+    position: relative;
+    padding: 10px;
+}
+
+#contenedor-boton--seleccionar{
     display: flex;
     justify-content: center;
     align-items: center;
-    position: relative;
-    margin-left: 45%;
-    margin-top: -100px;
-
 }
 
 .tarjeta-de-personajes img{
@@ -151,31 +153,28 @@ input{
 
 
 
-
-
-
-
-
-.vida-bar {
+.vida-bar{
     width: 200px;
     height: 20px;
     background-color: #ddd;
+    border-radius: 5px;
+    box-shadow: 2px 2px 2px gold;
   }
 
-  #vida-progreso-jugador{
+#vida-progreso-jugador{
     display: block;
     height: 100%;
     background-color: #ff0000;
     width: 100%; /* Cambia este valor con JavaScript para representar el progreso */
-  }
+    border-radius: 5px;
+}
 
-
-  #vida-progreso-enemigo{
+#vida-progreso-enemigo{
     display: block;
     height: 100%;
     background-color: #ff0000;
     width: 100%; /* Cambia este valor con JavaScript para representar el progreso */
-
+    border-radius: 5px;
   }
 
 
@@ -222,4 +221,139 @@ input{
 
 .boton:hover::after{
     top:0;
+}
+
+/* ----------ataques-Defensa pokemones----------- */
+
+#contenedor-ataques{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: -100px;
+    gap: 10px;
+}
+
+#contenedor-defensas{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: -100px;
+    gap: 10px;
+}
+
+.carta{
+    width: 150px;
+    height: 300px;
+    cursor: pointer;
+}
+
+.carta-pokemon{
+    width:100%;
+}
+
+.pokemon{
+    width: 100%;
+    opacity: 0;
+    display: block;
+    position: relative;
+}
+
+.carta:hover .carta-pokemon{
+    transform: perspective(900px) translateY(-5%) rotateX(30deg);
+    transition: 0.5s;
+}
+
+.carta:hover .pokemon{
+    margin-top: -200px;
+    opacity: 1;
+    transition: 0.5s;
+}
+
+/* ----------Ventana Modal----------- */
+
+
+.contenedor-mensaje{
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0; left: 0;
+    background-color: rgb(144, 148, 150, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-items: center;
+    z-index: 100;
+} 
+
+.contenido-mensaje{
+    width: 100%;
+    max-width: 400px;
+    height: 300px;
+    padding: 20px;
+    background-color: #ffe659;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    box-shadow: 2px 2px 2px rgb(0,0,0,.205);
+}
+
+
+.contenido-mensaje p{
+    margin-bottom: 15px;
+    padding: 15px 0px;
+    font-family: 'Fjalla One', sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+.contenido-mensaje .btn-cerrar{
+    width: 100%;
+    margin-top: -280px;
+    display: flex;
+    justify-content: flex-end;
+    
+} 
+
+.contenido-mensaje .btn-cerrar label{
+    padding: 1px 5px;
+    background-color: #b31a1f;
+    box-shadow: 3px 3px 2px black;
+    color: #fff;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 300ms ease;
+
+}
+
+.contenido-mensaje .btn-cerrar label:hover{
+    background-color: #185e83;
+}
+
+
+#btn-modal:checked ~ .contenedor-mensaje{
+    display: none;
+}
+
+
+.model-pokemones{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    gap: 50px;
+}
+
+#mensaje-resultado{
+    display: flex;
+    justify-content: center;
+    margin-left: 35vw;
+    position: fixed
+    
+}
+
+.logo-at-de img{
+    width: 150px;
+    height: 180px;
+    position: fixed;
+    margin: auto;
+    margin-top: -65px;
 }
